# 80sTerminal

./: .gitignore  Cargo.toml  README.md
assets/: 80sTerminal.icns  Info.plist
scripts/: bundle.sh  make_icon.py
src/: app.rs  main.rs
src/config/: keybindings.rs  mod.rs  profile.rs
src/render/: context.rs  mod.rs  text.rs
src/render/crt/: mod.rs  pipeline.rs
src/shaders/: crt.wgsl  text.wgsl
src/shell/: integration.rs  mod.rs
src/terminal/: grid.rs  mod.rs  parser.rs  pty.rs  selection.rs
src/ui/: mod.rs  search.rs  settings_window.rs  splits.rs  tabs.rs
