[package]
name = "eighty-s-terminal"
version = "0.1.0"
edition = "2021"
description = "80sTerminal - A GPU-accelerated CRT terminal emulator with authentic retro monitor styles"
authors = ["horsepill"]
license = "MIT"

[[bin]]
name = "80sterminal"
path = "src/main.rs"

[dependencies]
# Window and GPU
wgpu = "0.20"
winit = "0.29"
pollster = "0.3"
raw-window-handle = "0.6"
muda = "0.15"

# UI
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"

# Terminal emulation
vte = "0.13"
portable-pty = "0.8"

# Font rendering
fontdue = "0.9"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

# Utilities
anyhow = "1.0"
copypasta = "0.10"
notify = "7.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
shellexpand = "3.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
